# hello_world

./: ApproximatingPi.h  BlackScholes.h  BoxMuller.h  BubbleSorting.h  CMakeLists.txt  CleanThisCode.h  EXAMPLE.h  EvenOrOdd.h  ExchangeTwoValues.h  GenerateRandomIntGuess.h  GenerateRandomReal.h  Insurance.h  MeanVarEtcOf5Int.h  PseudorandomGenerator.h  README.md  SumProdEtc.h  main.cpp
